--- a/.github/workflows/generateFolderForAddonAuthors.yml
+++ b/.github/workflows/generateFolderForAddonAuthors.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v5
     - name: Transform
       run: |
-        for dir in addons/*; do
+        for dir in ./addons/*; do
         addon=$(basename "$dir")
         cd $dir
         done
