--- a/.github/workflows/generateFolderForAddonAuthors.yml
+++ b/.github/workflows/generateFolderForAddonAuthors.yml
@@ -14,3 +14,7 @@ jobs:
       run: |
         ls
         cd addons
+        for dir in /*; do
+        addon=$(basename "$dir")
+        cd $addon
+        done
