--- a/.github/workflows/generateFolderForAddonAuthors.yml
+++ b/.github/workflows/generateFolderForAddonAuthors.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v5
+    - name: "Set up Python"
+      uses: actions/setup-python@v6
+      with:
+        python-version-file: ".python-version"
+    - name: Install the latest version of uv
+      uses: astral-sh/setup-uv@v6
     - name: Transform
       run: |
         cd addons
@@ -19,7 +25,10 @@ jobs:
         cd "$addon"
         for lang in *; do
         [ -f "$lang/$addon.po" ] || continue
-        mv "$lang/$addon.po" ../shared/$addon/$lang/locale/LC_MESSAGES/nvda.po" -p -f
+        mkdir -p "../shared/$addon/locale/$lang/LC_MESSAGES"
+        mv -f "$lang/$addon.po" "../shared/$addon/locale/$lang/LC_MESSAGES/nvda.po"
+        [ -f "$lang/$addon.xliff" ] || continue
+          uv run ./utils/l10nUtil.py xliff2md "$lang/$addon.xliff" "../shared/$addon/doc/$lang/readme.md"
         done
         cd ..
         done
