--- a/.github/workflows/generateFolderForAddonAuthors.yml
+++ b/.github/workflows/generateFolderForAddonAuthors.yml
@@ -18,26 +18,22 @@ jobs:
       uses: astral-sh/setup-uv@v6
     - name: Transform
       run: |
-        [ if -d shared ]; then
+        if [ -d shared ]; then
         echo "Warning: folder already exists"
         else
         mkdir shared
         fi
-        cd l10n
-        for dir in *; do
+        for dir in l10n/*; do
         [ -d "$dir" ] || continue
         addon=$(basename "$dir")
-        cd "$addon"
-        for lang in *; do
+        for lang in l10n/$addon/*; do
         [ -f "$lang/$addon.po" ] || continue
-        mkdir -p "../shared/$addon/locale/$lang/LC_MESSAGES"
-        mv -f "$lang/$addon.po" "../shared/$addon/locale/$lang/LC_MESSAGES/nvda.po"
-        [ -f "$lang/$addon.xliff" ] || continue
+        mkdir -p "shared/$addon/locale/$lang/LC_MESSAGES"
+        mv -f "l10n/$addon/$lang/$addon.po" "shared/$addon/locale/$lang/LC_MESSAGES/nvda.po"
+        [ -f "l10n/$addon/$lang/$addon.xliff" ] || continue
         #uv run ../utils/l10nUtil.py xliff2md "$lang/$addon.xliff" "../shared/$addon/doc/$lang/readme.md"
         done
-        cd ..
         done
-        cd ..
         ls -R
     - name: Commit and push shared folder
       id: commit
