--- a/.github/workflows/generateFolderForAddonAuthors.yml
+++ b/.github/workflows/generateFolderForAddonAuthors.yml
@@ -26,7 +26,7 @@ jobs:
         for dir in l10n/*; do
         [ -d "$dir" ] || continue
         addon=$(basename "$dir")
-        for lang in l10n/$addon/*; do
+        for lang in $dir/*; do
         [ -f "$lang/$addon.po" ] || continue
         mkdir -p "shared/$addon/locale/$lang/LC_MESSAGES"
         mv -f "l10n/$addon/$lang/$addon.po" "shared/$addon/locale/$lang/LC_MESSAGES/nvda.po"
