Create directories before trying to generate markdown

--- a/.github/workflows/generateFolderForAddonAuthors.yml
+++ b/.github/workflows/generateFolderForAddonAuthors.yml
@@ -32,7 +32,7 @@ jobs:
         mkdir -p "shared/$addon/locale/$lang/LC_MESSAGES"
         mv -f "l10n/$addon/$lang/$addon.po" "shared/$addon/locale/$lang/LC_MESSAGES/nvda.po"
         [ -f "l10n/$addon/$lang/$addon.xliff" ] || continue
-        echo $addon > shared/$addon/doc/$lang/readme.md
+        mkdir -p "shared/$addon/doc/$lang"
         uv run utils/l10nUtil.py xliff2md "l10n/$addon/$lang/$addon.xliff" "shared/$addon/doc/$lang/readme.md"
         done
         done
