--- a/.github/workflows/generateFolderForAddonAuthors.yml
+++ b/.github/workflows/generateFolderForAddonAuthors.yml
@@ -2,9 +2,10 @@ name: Generate folder for add-on authors
 
 on:
   workflow_dispatch:
-
   workflow_call:
-  
+  schedule:
+  # Every Monday at 00:05 UTC
+    - cron: '5 0 * * 1'
 jobs:
   generateSharedFolder:
     runs-on: ubuntu-latest
