Export add-ons to Crowdin 1 hour after fetching translations

--- a/.github/workflows/exportAddonsToCrowdin.yml
+++ b/.github/workflows/exportAddonsToCrowdin.yml
@@ -3,6 +3,9 @@ name: Export add-ons to Crowdin
 on:
   workflow_dispatch:
 
+  schedule:
+    # Every Monday at 01:00 UTC
+    - cron: '0 1 * * 1'
 jobs:
   setMatrix:
     uses: ./.github/workflows/setMatrix.yml
