--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -83,3 +83,13 @@ jobs:
         --body "Merged translations from Crowdin"
       env:
         GITHUB_TOKEN: ${{ github.token }}
+    - name: Manually trigger generateFolderForAddonAuthors workflow
+      uses: actions/github-script@v8
+      with:
+        script: |
+        await github.rest.actions.createWorkflowDispatch({
+          owner: context.repo.owner,
+          repo: context.repo.repo,
+          workflow_id: 'generateFolderForAddonAuthors.yml',
+          ref: '${{ github.ref_name }}'
+        });
