Grant access to actions in fetch translations workflow

--- a/.github/workflows/fetch-crowdin-translations.yml
+++ b/.github/workflows/fetch-crowdin-translations.yml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      actions: write
     env:
       branchName: updateCrowdinTranslations${{ github.run_id }}
 
