--- a/.github/workflows/setMatrix.yml
+++ b/.github/workflows/setMatrix.yml
@@ -16,7 +16,7 @@ jobs:
         cd addons
         repos=$(ls -d */ | sed 's#/##' | jq -R -s -c 'split("\n")[:-1]')
         # echo "repos=$repos" >> $GITHUB_ENV
-        echo repos
+        echo $repos
     outputs:
       repos: ${{ env.repos }}
       
