--- a/.github/workflows/setMatrix.yml
+++ b/.github/workflows/setMatrix.yml
@@ -15,8 +15,9 @@ jobs:
       run: |
         cd addons
         repos=$(ls -d */ | sed 's#/##' | jq -R -s -c 'split("\n")[:-1]')
-        # echo "repos=$repos" >> $GITHUB_ENV
+        echo "repos=$repos" >> $GITHUB_ENV
         echo $repos
+        echo fromJSON($repos)
     outputs:
       repos: ${{ env.repos }}
       
