--- a/.github/workflows/exportAddonsToCrowdin.yml
+++ b/.github/workflows/exportAddonsToCrowdin.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         repo: ${{ fromJSON(needs.setMatrix.outputs.repos) }}
     with:
-      repo: ${{ matrix.repo }}
+      repo: ${{ matrix.repo.repos }}
       update: true
     secrets: inherit
       
