--- a/.github/workflows/setMatrix.yml
+++ b/.github/workflows/setMatrix.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         cd addons
         repos=$(ls -d */ | sed 's#/##' | jq -R -s -c 'split("\n")[:-1]')
-        echo "repos={"repos": $repos}" >> $GITHUB_OUTPUT
+        echo 'repos=$repos' >> "$GITHUB_OUTPUT"
         echo $repos
     outputs:
       repos: ${{ steps.setMatrix.outputs.repos }}
