--- a/.github/workflows/setMatrix.yml
+++ b/.github/workflows/setMatrix.yml
@@ -17,7 +17,8 @@ jobs:
         cd addons
         repos=$(ls -d */ | sed 's#/##' | jq -R -s -c 'split("\n")[:-1]')
         echo 'repos=$repos' >> "$GITHUB_OUTPUT"
-        echo $repos
+        #echo $repos
+        echo ${{ outputs.repos }}
     outputs:
       repos: ${{ steps.setMatrix.outputs.repos }}
       
