--- a/.github/workflows/exportAddonsToCrowdin.yml
+++ b/.github/workflows/exportAddonsToCrowdin.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        repo: ${{fromJSON(["a","b"])}}
+        repo: ${{fromJSON("["a","b"]")}}
     with:
       repo: ${{ matrix.repo }}
       update: true
