--- a/.github/workflows/exportAddonsToCrowdin.yml
+++ b/.github/workflows/exportAddonsToCrowdin.yml
@@ -7,7 +7,10 @@ on:
     # Every Monday at 01:00 UTC
     - cron: '0 1 * * 1'
 jobs:
-      
+
+  buildMatrix:      
+    uses: ./.github/workflows/setMatrix.yml
+
   exportAddons:
     needs: setMatrix
     uses: ./.github/workflows/exportAddonToCrowdin.yml
@@ -15,7 +18,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        repo: ${{ fromJson(needs.setMatrix.outputs.repos) }}
+        repo: ${{ fromJson(needs.buildMatrix.outputs.repos) }}
     with:
       repo: ${{ matrix.repo }}
       update: true
