--- a/.github/workflows/exportAddonsToCrowdin.yml
+++ b/.github/workflows/exportAddonsToCrowdin.yml
@@ -12,7 +12,7 @@ jobs:
     uses: ./.github/workflows/setMatrix.yml
 
   exportAddons:
-    needs: setMatrix
+    needs: buildMatrix
     uses: ./.github/workflows/exportAddonToCrowdin.yml
     strategy:
       fail-fast: false
