--- a/.github/workflows/exportAddonsToCrowdin.yml
+++ b/.github/workflows/exportAddonsToCrowdin.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         cd addons
         repos=$(ls -d */ | sed 's#/##' | jq -R -s -c 'split("\n")[:-1]')
-        echo 'repos=$repos' >> "$GITHUB_ENV"
+        echo 'repos="$repos"' >> "$GITHUB_ENV"
         #echo $repos
     outputs:
       repos: ${{ env.repos }}
