--- a/.github/workflows/exportAddonsToCrowdin.yml
+++ b/.github/workflows/exportAddonsToCrowdin.yml
@@ -17,8 +17,7 @@ jobs:
       id: repos
       run: |
         cd addons
-        repos=$(ls -d */ | sed 's#/##' | jq -R -s -c 'split("\n")[:-1]')
-        echo 'repos="$repos"' >> "$GITHUB_ENV"
+        echo "repos=$(ls -d */ | sed 's#/##' | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_ENV
         #echo $repos
     outputs:
       repos: ${{ env.repos }}
