Fix path to repo in fetchTranslations action to merge translations in add-ons

--- a/.github/actions/fetchTranslations/action.yml
+++ b/.github/actions/fetchTranslations/action.yml
@@ -19,6 +19,7 @@ runs:
     - name: Checkout repo
       uses: actions/checkout@v5
       with:
+        repository: nvdaaddons/crowdinRegistration
         path: ${{ inputs.path }}
     - name: Commit and push add-on with translations
       id: commit
